src/objects/Contact_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Alert</relationshipLabel>
        <relationshipName>Contact_Alert</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsHidden_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jo_Alert__c</fullName>
        <label>Jo Alert</label>
        <referenceTo>Jo_Alert__c</referenceTo>
        <relationshipLabel>Contact Alert</relationshipLabel>
        <relationshipName>Contact_Alert</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jo_Alert__c</columns>
        <columns>Contact__c</columns>
        <columns>Is_Enabled__c</columns>
        <columns>IsHidden_Alert__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000}</displayFormat>
        <label>Contact Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Alert</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>